<resources>
    <string name="app_name">INV</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="rupees">\u20B9</string>
    <string name="save">Save</string>
    <string name="addresss">ADDRESSS</string>
    <string name="address1">Address</string>
    <string name="phone">phone</string>
    <string name="proccedtobuy">ProccedToBuy</string>
    <string name="placeorder">placeOrder</string>
    <string name="inr"> \u0020  \u20B9 %s</string>
    <string name="ithu_n_namma_n_veedu">ITHU \n NAMMA \n VEEDU</string>
    <string name="cart_is_empty">Cart is Empty :-(</string>
    <string name="veg">veg</string>
    <string name="nonveg">NonVeg</string>
    <string name="place_order">Place Order</string>
    <string name="proceed_to_buy">Proceed to Buy</string>
</resources>